Fixed broken style on small screens.

--- a/src/components/Application/Application.css
+++ b/src/components/Application/Application.css
@@ -1,22 +1,19 @@
-.Application {
-    overflow: hidden;
-}
-
-.Application .bg-top {
+.Application .wrapper-top {
     display: block;
+    min-width: 960px;
     background-color: #e1e1e1;
 }
 
-.Application .bg-bottom {
+.Application .wrapper-bottom {
     display: block;
-    width: 100%;
+    min-width: 960px;
 }
 
 .Application .pageContent {
+    display: block;
     width: 928px;
     margin: 0 auto;
     padding: 0px 16px 0px 16px;
-    overflow: hidden;
 }
 
 .Application .divider {
