--- a/src/components/ContentComparison/ContentComparison.css
+++ b/src/components/ContentComparison/ContentComparison.css
@@ -2,4 +2,5 @@
     display: inline-block;
     width: 60%;
     vertical-align: text-top;
+    padding-bottom: 32px;
 }
