--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Muli);
 
 html {
-    height: 100%;
     font-weight: 200;
     font-size: 1em;
     font-family: 'Muli', sans-serif;
